# Leistungskurve_Aufgabe_1

./: README.md  load_data.py  main.py  power_curve.py  pyproject.toml  sort.py
source/: load_data.py  power_curve.py  sort.py
