[project]
name = "Leistungskurve_Aufgabe_1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cedric Rissi", email = "cedric.rissi2003@gmail.com"},
]
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "packaging==26.2",
    "pillow==12.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "altair==5.5.0",
    "altgraph==0.17.5",
    "anyio==4.11.0",
    "anysqlite==0.0.5",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dep-logic==0.5.2",
    "distlib==0.4.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.29.0",
    "findpython==0.7.1",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "h11==0.16.0",
    "hishel==1.2.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "id==1.6.1",
    "idna==3.10",
    "installer==1.0.0",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.9",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.9",
    "lark==1.3.0",
    "macholib==1.16.4",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "modulegraph==0.19.7",
    "MouseInfo==0.1.3",
    "msgpack==1.1.2",
    "narwhals==2.8.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pbs-installer==2026.4.7",
    "pdm==2.26.8",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "plotly==6.3.1",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py2app==0.28.10",
    "pyarrow==21.0.0",
    "PyAutoGUI==0.9.54",
    "pycparser==2.23",
    "pydeck==0.9.1",
    "PyGetWindow==0.0.9",
    "Pygments==2.19.2",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "PyMsgBox==2.0.1",
    "pynput==1.8.1",
    "pyobjc-core==11.1",
    "pyobjc-framework-ApplicationServices==11.1",
    "pyobjc-framework-Cocoa==11.1",
    "pyobjc-framework-CoreText==11.1",
    "pyobjc-framework-Quartz==11.1",
    "pyparsing==3.2.5",
    "pyperclip==1.11.0",
    "pyproject-hooks==1.2.0",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.18",
    "PyQt5-sip==12.18.0",
    "PyRect==0.2.0",
    "PyScreeze==1.0.1",
    "python-discovery==1.2.2",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "pytweening==1.2.0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "resolvelib==1.2.1",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==15.0.0",
    "rpds-py==0.27.1",
    "rubicon-objc==0.5.2",
    "Send2Trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "streamlit==1.50.0",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomlkit==0.14.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "truststore==0.10.4",
    "types-python-dateutil==2.9.0.20251008",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "unearth==0.18.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "virtualenv==21.3.0",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.14",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
